2011-12-12 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--root-directory): Remove ~/elisp
	support and migrate to ~/.emacs.d
	(epackage-package-name-valid-p): Correct regexp.
	(epackage--layout-template-info): (License): Add tag Custom.

2011-12-11 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-add-provide-to-file): New.
	(epackage-devel-generate-autoloads): Use
	`epackage-add-provide-to-buffer'.
	(epackage-devel-compose-package-dir): Use
	`epackage-add-provide-to-buffer'.
	(epackage-package-name-valid-p): New.
	(epackage-error-if-invalid-package-name): New.
	(epackage-devel-compose-main): Chnage argument order:
	PACKAGE, DIR.
	(epackage-field-goto): New.
	(epackage-field-fetch-value): New.
	(epackage-field-set): New.
	(epackage-devel-compose-package-info): New.
	(epackage-devel-compose-package-dir): Add argument ALIST.
	Call `epackage-devel-compose-package-info'.
	(epackage-devel-information-wiki): New.
	(epackage-devel-compose-package-info-from-file): New.
	(epackage-devel-compose-package-info-from-current-buffer): New.
	(epackage-devel-information-buffer): Correct license search.
	(epackage-byte-compile-package-1): New.
	(epackage-byte-compile-package-standard): Rewrite.
	(epackage--layout-template-compile-main): New.
	(epackage-devel-generate-compile-1): New.
	(epackage--directory-exclude-regexp): Add 'tests'.
	(epackage-files-recursive-lisp): New.

2011-12-10 Sun  Jari Aalto  <jari.aalto@cante.net>

        * epackage.el (epackage-devel-template-directory):
        Correct docstring.
        (epackage-devel-compose-epkg-dir): New.
        (epackage-devel-compose-1-interactive): New.
        (epackage-devel-compose-main): Simplify.
	(epackage-devel-generate-loaddefs): Write provide statement.
	(epackage-add-provide-to-buffer): New.

2011-12-09 Fri  Jari Aalto  <jari.aalto@cante.net>

        * epackage.el
        (top level): Reduce use of term Yellow Pages.
        (epackage-batch-ui-upgrade-sources-list): Rename.